tests/paczka1/small_fuzzy/96299193.err
Error in line 5: 3g4 S441 61,8
Error in line 4: r2Na0 A815 93,0
Error in line 11: wWV A815 83,74
Error in line 8: A815 A815 4,9
